[package]
name = "js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode", "regex"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm15-0"] }

[build-dependencies]
lalrpop = "0.20.0"
