[package]
name = "js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.10.0"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode", "regex"] }
log = "0.4.17"
slotmap = "1.0.6"
tap = "1.0.1"

[build-dependencies]
lalrpop = "0.20.0"
